@@ -1,1 +1,1 @@
-../rc.d/S51ddns
+../rc.d/W45ddns
