@@ -1,1 +1,1 @@
-../rc.d/S43dhcpd
+../rc.d/W30dhcpd
