@@ -1,1 +1,1 @@
-../rc.d/S53igmp_proxy
+../rc.d/W50igmp_proxy
