@@ -1,1 +1,1 @@
-../rc.d/S35iptables
+../rc.d/W20iptables
