@@ -1,1 +1,1 @@
-../rc.d/S60shaper
+../rc.d/W60shaper
