@@ -1,1 +1,1 @@
-../rc.d/S70vpnhelper
+../rc.d/W65vpnhelper
