@@ -1,1 +1,1 @@
-../rc.d/S30wan
+../rc.d/W10wan
