@@ -1,1 +1,1 @@
-../rc.d/S50wscd
+../rc.d/W40wscd
