@@ -13,6 +13,6 @@ all:
 		 make && make DESTDIR=`pwd`/../staging install)
 
 romfs:
-	$(ROMFSINST) -S init.d/S48chillispot /etc/rc.d/S48chillispot
-	$(ROMFSINST) -s /etc/rc.d/S48chillispot /etc/init.d/chillispot
+	$(ROMFSINST) -S init.d/W48chillispot /etc/rc.d/W48chillispot
+	$(ROMFSINST) -s /etc/rc.d/W48chillispot /etc/init.d/chillispot
 	$(ROMFSINST) -S staging/usr/sbin/chilli /bin/chilli
