@@ -1,2 +1,0 @@
-rm -f /var/run/lld2d*.pid
-/sbin/lld2d br0 eth1
