@@ -16,9 +16,9 @@ dist-hook:
 	cp -p $(srcdir)/init/redhat/zebra.* $(distdir)/init/redhat
 
 romfs: install
-	$(ROMFSINST) -S init.d/S46ripd /etc/rc.d/S46ripd
-	$(ROMFSINST) -s /etc/rc.d/S46ripd /etc/init.d/ripd
-	$(ROMFSINST) -S init.d/S47zebra /etc/rc.d/S47zebra
-	$(ROMFSINST) -s /etc/rc.d/S47zebra /etc/init.d/zebra
+	$(ROMFSINST) -S init.d/W46ripd /etc/rc.d/W46ripd
+	$(ROMFSINST) -s /etc/rc.d/W46ripd /etc/init.d/ripd
+	$(ROMFSINST) -S init.d/W47zebra /etc/rc.d/W47zebra
+	$(ROMFSINST) -s /etc/rc.d/W47zebra /etc/init.d/zebra
 	$(ROMFSINST) -S filesystem/sbin/zebra /bin/zebra
 	$(ROMFSINST) -S filesystem/sbin/ripd /bin/ripd
